--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "deploy": "ng deploy --base-href=/angular-posts/",
     "watch": "ng build --watch --configuration development",
     "test": "jest"
   },
@@ -31,6 +32,7 @@
     "@angular/compiler-cli": "^19.2.14",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^30.0.0",
+    "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.7.0",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.6.0",
