--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy": "ng deploy --base-href=/angular-posts/",
+    "deploy": "ng build --configuration production && npx angular-cli-ghpages --dir=dist/angular-posts/browser",
     "watch": "ng build --watch --configuration development",
     "test": "jest"
   },
